[package]
name = "typewiz"
version = "0.1.0"
edition = "2024"
description = "TYPE WiZ."

[dependencies]
bincode = "2.0.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.52", features = ["derive"] }
console = "0.16.1"
crossterm = "0.29.0"
dialoguer = "0.12.0"
rand = "0.9.2"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
